--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,39 @@
-Django==1.9.2
-dj-database-url==0.3.0
+chardet==2.0.1
+colorama==0.2.5
 dj-static==0.0.6
-static3==0.6.1
-gunicorn==19.3.0
-path.py==8.1.2
-ptyprocess==0.5
-static3==0.6.1
-XlsxWriter==0.7.3
-python-docx == 0.8.6
+Django==1.9.2
+django-excel==0.0.9
+docutils==0.11
+enum34==1.0.4
+et-xmlfile==1.0.1
+html5lib==0.999
+jdcal==1.3
+jieba==0.39
+Jinja2==2.7.2
+lml==0.0.1
+lxml==3.3.3
+MarkupSafe==0.18
+olefile==0.44
+openpyxl==2.4.9
+pathlib==1.0.1
+Pillow==4.3.0
+psycopg2==2.7.3.1
+pyexcel==0.5.4
+pyexcel-io==0.5.3
+pyexcel-webio==0.1.2
+pyexcel-xls==0.5.2
+pyexcel-xlsx==0.5.2
+Pygments==1.6
+pyScss==1.3.3
+python-docx==0.8.6
+requests==2.2.1
+roman==2.0.0
+six==1.5.2
+Sphinx==1.2.2
+static3==0.7.0
+texttable==0.9.1
+urllib3==1.7.1
+virtualenv==1.11.6
+xlrd==1.1.0
+XlsxWriter==1.0.0
+xlwt==1.3.0
