--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ static3==0.7.0
 texttable==0.9.1
 urllib3==1.7.1
 virtualenv==1.11.6
+whitenoise==3.3.1
 xlrd==1.1.0
 XlsxWriter==1.0.0
 xlwt==1.3.0
