--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==1.9.2
 django-excel==0.0.9
+django-nocaptcha-recaptcha==0.0.20
 docutils==0.11
 enum34==1.0.4
 et-xmlfile==1.0.1
@@ -38,4 +39,3 @@ whitenoise==3.3.1
 xlrd==1.1.0
 XlsxWriter==1.0.0
 xlwt==1.3.0
-gunicorn==19.3.0
