--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django>=1.11
-Pillow>=4.3.0
+Django=1.11
+Pillow=4.3.0
 django-sortedm2m>=1.5.0 # Need at least 1.4.0 for it to work with Django 1.11.
 ExifRead>=2.1.2
 colorama==0.2.5
