--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.11
+django>=1.11.18
 Pillow==4.3.0
 django-sortedm2m>=1.5.0 # Need at least 1.4.0 for it to work with Django 1.11.
 ExifRead>=2.1.2
@@ -29,16 +29,16 @@ pyexcel-xlsx==0.5.2
 Pygments==1.6
 pyScss==1.3.3
 python-docx==0.8.6
-requests==2.2.1
+requests>=2.20.0
 roman==2.0.0
 six==1.5.2
 Sphinx==1.2.2
 static3==0.7.0
 texttable==0.9.1
-urllib3==1.7.1
+urllib3>=1.23
 virtualenv==1.11.6
 whitenoise==3.3.1
 xlrd==1.1.0
 XlsxWriter==1.0.0
 xlwt==1.3.0
-gunicorn==19.3.0
+gunicorn>=19.5.0
