--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,30 @@
-django>=1.11.18
-Pillow==4.3.0
-django-sortedm2m>=1.5.0 # Need at least 1.4.0 for it to work with Django 1.11.
-ExifRead>=2.1.2
-colorama==0.2.5
-dj-database-url==0.5.0
-dj-static==0.0.6
-django-excel==0.0.9
+asgiref==3.7.2
+chardet==5.2.0
+Django==3.2.23
+django-excel==0.0.10
 django-nocaptcha-recaptcha==0.0.20
-docutils==0.11
-enum34==1.0.4
-et-xmlfile==1.0.1
-html5lib==0.999
-jdcal==1.3
-jieba==0.39
-Jinja2==2.7.2
-lml==0.0.1
-lxml==3.3.3
-MarkupSafe==0.18
-olefile==0.44
-openpyxl==2.4.9
-pathlib==1.0.1
-psycopg2==2.7.3.1
-pyexcel==0.5.4
-pyexcel-io==0.5.3
-pyexcel-webio==0.1.2
-pyexcel-xls==0.5.2
-pyexcel-xlsx==0.5.2
-Pygments==1.6
-pyScss==1.3.3
-python-docx==0.8.6
-requests>=2.20.0
-roman==2.0.0
-six==1.5.2
-Sphinx==1.2.2
-static3==0.7.0
-texttable==0.9.1
-urllib3>=1.23
-virtualenv==1.11.6
-whitenoise==3.3.1
-xlrd==1.1.0
-XlsxWriter==1.0.0
+django-photologue==3.17
+django-sortedm2m==3.1.1
+et-xmlfile==1.1.0
+ExifRead==3.0.0
+jieba==0.42.1
+lml==0.1.0
+lxml==4.9.3
+openpyxl==3.1.2
+Pillow==10.1.0
+psycopg2-binary==2.9.9
+pyexcel==0.7.0
+pyexcel-io==0.6.6
+pyexcel-webio==0.1.4
+pyexcel-xls==0.7.0
+pyexcel-xlsx==0.6.0
+Pygments==2.17.2
+python-docx==1.1.0
+pytz==2023.3.post1
+sqlparse==0.4.4
+texttable==1.7.0
+typing_extensions==4.8.0
+whitenoise==6.6.0
+xlrd==2.0.1
+XlsxWriter==3.1.9
 xlwt==1.3.0
-gunicorn>=19.5.0
