--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-excel==0.0.10
 django-photologue==3.17
 django-recaptcha==4.0.0
 django-sortedm2m==3.1.1
+django-sqlprint-middleware==0.1.4
 et-xmlfile==1.1.0
 ExifRead==3.0.0
 jieba==0.42.1
@@ -19,11 +20,12 @@ pyexcel-webio==0.1.4
 pyexcel-xls==0.7.0
 pyexcel-xlsx==0.6.0
 Pygments==2.17.2
+pygments-pprint-sql==0.1.0
 python-docx==1.1.0
 pytz==2023.3.post1
 sqlparse==0.4.4
 texttable==1.7.0
-typing_extensions==4.9.0
+typing_extensions==4.8.0
 whitenoise==6.6.0
 xlrd==2.0.1
 XlsxWriter==3.1.9
